--- a/index.html
+++ b/index.html
@@ -27,15 +27,18 @@
         <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
+                    <a class="nav-link" href="index.html">Página inicial <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="ebook.html">E-book</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contato.html">Contato</a>
+                </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Contatos
+                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        Mais
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Quem sou</a>
@@ -50,47 +53,145 @@
             </form>
         </div>
     </nav>
-<!--/Menu-->
+    <!--/Menu-->
 
-<!--Grid-->
-<div class="container-fluid"> 
+    <!--Carrossel -->
+    <div id="carouselExampleIndicators" class="carousel slide container" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
 
-    <div class="row mt-5 d-flex justify-content-center">
+        <div class="container">
+            <div class="row">
+                <div class="col"></div>
+                <div class="col-6">
+                    <div id="demo" class="carousel slide" data-ride="carousel">
+                        <!-- The slideshow -->
+                        <div class="carousel-inner center-block">
+                            <div class="carousel-item active">
+                                <img src="assets/imagens/1.png" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/imagens/2.png" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/imagens/3.png" alt="">
+                            </div>
+                        </div>
 
-        <div class="col-md-4 p-0">
-            <div class="bg-danger">4 colunas</div>
+                        <!-- Left and right controls -->
+                        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#demo" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col"></div>
+            </div>
         </div>
-        
-        <div class="col-md-4 p-0">
-            <div class="bg-warning">4 colunas</div>
-        </div>
-
-        <div class="col-md-4 p-0">
-            <div class="bg-info">4 colunas</div>
-        </div>
-
     </div>
 
-    <div class="row mt-5 d-flex justify-content-center">
+    <!--/Carrossel -->
 
-        <div class="col-md-6 p-0">
-            <div class="bg-danger">6 colunas</div>
-        </div>
-        
-        <div class="col-md-6 p-0">
-            <div class="bg-warning">6 colunas</div>
-        </div>
+    <!--Jumbotron-->
+    <div class="jumbotron jumbotron-fluid bg-warning">
+        <div class="container justificado">
+            <h1 class="display-4">Você sente muita <b>DIFICULDADE</b> na hora de investir seu dinheiro?</h1>
 
+            <p class="lead blockquote justificado">Você gostaria de investir aqui do Brasil e poder ganhar dividendos em
+                dólares todos os meses? Mas você não entende nada sobre o assunto e no fim acaba ficando horas e mais
+                horas pesquisando sobre investimentos e não encontra informações seguras e confiáveis sobre o o assunto?
+                Então presta atenção nisso, você sabia que para começar a investir seu dinheiro, não existe "monstro de
+                sete cabeças"? é tudo muito simples, objetivo e de fácil entendimento. Você pode começar hoje mesmo no
+                mundo dos investimentos e já ganhar dividendos em dólares e reais a partir do próximo mês.</p>
+        </div>
     </div>
+    <!--/Jumbotron-->
 
-</div>
+    <!--Cards-->
+    <div class="container">
+        <div class="card-columns">
+            <div class="card">
+                <img class="card-img-top" src="assets/imagens/card4.png" alt="Imagem de capa do card">
+                <div class="card-body">
+                    <h5 class="card-title">Título do card que quebra em uma nova linha</h5>
+                    <p class="card-text">Este é um card mais longo com suporte a texto embaixo, que funciona como uma
+                        introdução a um conteúdo adicional. Este conteúdo é um pouco maior.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="assets/imagens/card1.png" alt="Imagem de capa do card">
+                <div class="card-body">
+                    <h5 class="card-title">Título do card</h5>
+                    <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma introdução a
+                        um conteúdo adicional.</p>
+                    <p class="card-text"><small class="text-muted">Atualizados 3 minutos atrás</small></p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img" src="assets/imagens/card2.png" alt="Imagem do card">
+            </div>
+            <div class="card p-3 text-right">
+                <blockquote class="blockquote mb-0">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    <footer class="blockquote-footer">
+                        <small class="text-muted">
+                            Alguém famoso em <cite title="Título da fonte">Título da fonte</cite>
+                        </small>
+                    </footer>
+                </blockquote>
+            </div>
+
+        </div>
 
 
-<!--/Grid-->
+        <!--/Cards-->
+
+        <!--Texto e Vídeo-->
+        <div class="row mt-5 mb-5">
+            <div class="col-md-6">
+                <h3>Texto teste</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint iste obcaecati eum placeat sit iure
+                    et. At, assumenda sunt laudantium corrupti aliquid omnis deleniti doloribus cum ullam in numquam
+                    consequatur.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nemo ducimus eveniet incidunt assumenda
+                    repellendus, aperiam corporis laudantium cupiditate modi saepe perferendis vero at neque iusto
+                    accusantium iste molestiae voluptatum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore rem omnis deleniti, molestias
+                    exercitationem eos a quibusdam quo at nostrum consequatur porro repellendus, quam, corporis sed iure
+                    iusto sint! Quas?</p>
+            </div>
+
+            <div class="col-md-6">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/C6fuL0ZLUJk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+
+            </div>
+
+        </div>
+        <!--/Texto e Vídeo-->
+    </div>
+    </div>
+    <!--Rodapé-->
+    <footer>
+        <div class="container text-center">
+            <p>
+                Copyright &copy 2022 Diego Leão |Todos os direitos reservados.
+            </p>
+        </div>
+    </footer>
+    <!--/Rodapé-->
 
 
 
-<!--Scripts servidor Bootstrap -JS -->
+
+    <!--Scripts servidor Bootstrap -JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
