--- a/contato.html
+++ b/contato.html
@@ -57,7 +57,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h3 class="text-center">Preencha o formulário</h3>
+            <h3 class="text-center">Vamos interagir?</h3>
         </div>
     </div>
 
@@ -67,16 +67,17 @@
         <div class="col-md-12">
             <div class="container mb-5">
 
-                <form class="needs-validation" novalidate>
+                <form>
                     <div class="form-group">
-                        <label for="validationCustom02">Endereço de email:</label>
-                        <input type="email" class="form-control" id="email"
-                            placeholder="nome@exemplo.com" required>
-                            <div class="valid-feedback">Tudo certo!</div>
+                        <label for="exampleInputEmail1">Endereço de email:</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                            placeholder="nome@exemplo.com">
+                            <small id="emailHelp" class="form-text text-muted">Seus dados serão armazenados com segurança!</small>
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlSelect1">Qual é o seu assunto de interesse:</label>
                         <select class="form-control" id="assunto">
+                            <option>--escolha uma opção--</option>
                             <option>Educação financeira</option>
                             <option>Investimentos</option>
                             <option>Empreendedorismo/Negócios</option>
@@ -86,14 +87,14 @@
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1">Deixe um comentário:</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                        <input type="comentario" class="form-control" id="validationCustom02" required>
-                        <div class="valid-feedback">Tudo certo!</div>
                     </div>
+                    <div class="form-group form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Validar</label>
+                     </div>
 
-                    <div class="form-group">
-                        <button class="btn btn-outline-success">ENVIAR</button>
-
-                    </div>
+                    <button class="btn btn-outline-success">ENVIAR</button>
+                    
                 </form>
             </div>
         </div>
