--- a/contato.html
+++ b/contato.html
@@ -102,19 +102,29 @@
 
     <!--/Formulário-->
 
+    
+
+<div class="container-fluid footer">
     <hr>
+    <div class="row">
+        <div class="col-12">
+            <footer >
+                <div>
+                    <p class="container text-center">
+                        Copyright &copy 2022 Diego Leão |Todos os direitos reservados.
+                    </p>
+                </div>
+            </footer>
+        </div>
 
+    </div>
 
+</div>
 
 
     <!--Rodapé-->
-    <footer>
-        <div class="container text-center">
-            <p>
-                Copyright &copy 2022 Diego Leão |Todos os direitos reservados.
-            </p>
-        </div>
-    </footer>
+  
+ 
     <!--/Rodapé-->
 
     <!--Scripts servidor Bootstrap -JS -->
