--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     <!--/Carrossel -->
 
     <!--Jumbotron-->
-    <div class="jumbotron jumbotron-fluid bg-warning">
+    <div class="jumbotron jumbotron-fluid bg-nav">
         <div class="container justificado">
-            <h1 class="display-4">Você sente muita <b>DIFICULDADE</b> na hora de investir seu dinheiro?</h1>
+            <h1 class="display-5">Você sente muita <b>DIFICULDADE</b> na hora de investir seu dinheiro?</h1>
 
             <p class="lead blockquote justificado">Você gostaria de investir aqui do Brasil e poder ganhar dividendos em
                 dólares todos os meses? Mas você não entende nada sobre o assunto e no fim acaba ficando horas e mais
@@ -179,7 +179,7 @@
     </div>
     </div>
     <!--Rodapé-->
-    <footer>
+    <footer class="bg-nav">
         <div class="container text-center">
             <p>
                 Copyright &copy 2022 Diego Leão |Todos os direitos reservados.
